<resources>
    <string name="app_name">密码管理器</string>
    <string name="login_title">密码管理器</string>
    <string name="login_hint">请输入主密码：</string>
    <string name="add_hint1">请输入标题：</string>
    <string name="add_hint2">请输入密码：</string>
    <string name="add_generate">生成密码</string>
    <string name="verify_pass">验证通过</string>
    <string name="verify_save">记录密码</string>
    <string name="list_add">添加一条记录</string>

    <string name="button_confirm">确定</string>
    <string name="default_checked">abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="uppercase_checked">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="amazing_checked">!</string>
    <string name="at_checked">@</string>
</resources>
